[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/player_HUD.gd" type="Script" id=1]
[ext_resource path="res://gfx/health_icon.png" type="Texture" id=2]
[ext_resource path="res://gfx/armor.png" type="Texture" id=3]
[ext_resource path="res://gfx/kill_marker.png" type="Texture" id=4]

[node name="player_HUD" type="PanelContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 192.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="container" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 185.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="name_label" type="RichTextLabel" parent="container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 6.0
margin_right = 186.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "Player Name"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Player Name"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_styles" ]

[node name="hp_value" type="RichTextLabel" parent="container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_top = 26.0
margin_right = 218.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "100"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "100"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_styles" ]

[node name="hp_icon" type="Sprite" parent="container" index="2"]

position = Vector2( 15.0809, 33.521 )
texture = ExtResource( 2 )
_sections_unfolded = [ "BBCode", "custom_styles" ]

[node name="armor_value" type="RichTextLabel" parent="container" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_top = 52.0
margin_right = 218.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "100"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "100"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_styles" ]

[node name="armor_icon" type="Sprite" parent="container" index="4"]

position = Vector2( 15.0809, 57.521 )
texture = ExtResource( 3 )
_sections_unfolded = [ "BBCode", "Material", "Visibility", "custom_styles" ]

[node name="frag_value" type="RichTextLabel" parent="container" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_top = 52.0
margin_right = 308.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "0"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "0"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_styles" ]

[node name="frag_icon" type="Sprite" parent="container" index="6"]

position = Vector2( 99.4574, 56.0439 )
texture = ExtResource( 4 )


